2008-09-20  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.6.3
	* Fixed keycodes for GDK input

2008-09-19  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.6.2
	* Fixed issue with EPG getting wiped on profile save

2008-09-16  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.6.1
	* Several fixes to resolve crash bugs
	* Fixed issue with scheduled recordings selecting first channel

2008-09-14  Michael Lamothe <michael.lamothe@gmail.com>

	* Me TV 0.6, initial version
	* Complete code rewrite in C++ using C++ libraries